# GOES_VFI

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  <MagicMock name='mock.db_path' id='4480645984'>  <MagicMock name='mock.db_path' id='4549327712'>  <MagicMock name='mock.db_path' id='4564922928'>  <MagicMock name='mock.db_path' id='4594154672'>  <MagicMock name='mock.db_path' id='4678508832'>  <MagicMock name='mock.db_path' id='4679205280'>  <MagicMock name='mock.db_path' id='4679213344'>  <MagicMock name='mock.db_path' id='4723948384'>  <MagicMock name='mock.db_path' id='4747714848'>  <MagicMock name='mock.db_path' id='4751016352'>  <MagicMock name='mock.db_path' id='4751024416'>  <MagicMock name='mock.db_path' id='4777465168'>  <MagicMock name='mock.db_path' id='4777473232'>  <MagicMock name='mock.db_path' id='4777678160'>  <MagicMock name='mock.db_path' id='4798898464'>  <MagicMock name='mock.db_path' id='4799578528'>  <MagicMock name='mock.db_path' id='4799586592'>  <MagicMock name='mock.db_path' id='4808482768'>  <MagicMock name='mock.db_path' id='4808490496'>  <MagicMock name='mock.db_path' id='4809056208'>  <MagicMock name='mock.db_path' id='4869441584'>  <MagicMock name='mock.db_path' id='4869450320'>  <MagicMock name='mock.db_path' id='4869654240'>  <MagicMock name='mock.db_path' id='4869662304'>  <MagicMock name='mock.db_path' id='4879996576'>  <MagicMock name='mock.db_path' id='4880472720'>  <MagicMock name='mock.db_path' id='4880480784'>  <MagicMock name='mock.db_path' id='4882298736'>  <MagicMock name='mock.db_path' id='5225061008'>  <MagicMock name='mock.db_path' id='5225069744'>  <MagicMock name='mock.db_path' id='5225486992'>  <MagicMock name='mock.db_path' id='5225495056'>  <MagicMock name='mock.db_path' id='5365881488'>  <MagicMock name='mock.db_path' id='5365890224'>  (+244 more)
.cursor/rules/: goes-vfi-rules.mdc
.doctrees/: changelog.doctree  index.doctree  installation.doctree  license.doctree  quickstart.doctree  support.doctree
.doctrees/api/: api_generated.doctree  class_hierarchy.doctree  date_sorter_gui_tab.doctree  date_sorter_sorter.doctree  exceptions.doctree  (+87 more)
.github/: README.md  coverage-badge.json  labeler.yml  release-drafter.yml
.mypy_fixes/: MYPY_FIX_PLAN.md  fix_shared_components.py  shared_components.py.bak  shared_components_fix_plan.md  untyped_calls.txt
_modules/: index.html
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  license.rst.txt  quickstart.rst.txt  support.rst.txt
_static/: custom.css
api/: api_generated.html  class_hierarchy.html  date_sorter_gui_tab.html  date_sorter_sorter.html  date_sorter_view_model.html  exceptions.html  file_sorter_gui_tab.html  file_sorter_sorter.html  file_sorter_sorter_refactored.html  file_sorter_view_model.html  gui.html  gui_components_crop_manager.html  gui_components_model_manager.html  gui_components_preview_manager.html  gui_components_processing_manager.html  gui_components_settings_manager.html  gui_enhancements_integration.html  gui_integration_patch.html  gui_tabs_ffmpeg_settings_tab.html  gui_tabs_ffmpeg_settings_tab_enhanced.html  gui_tabs_main_tab.html  gui_tabs_main_tab_components_enums.html  gui_tabs_main_tab_components_types.html  gui_tabs_main_tab_components_utils.html  gui_tabs_main_tab_components_widgets.html  gui_tabs_main_tab_enhanced.html  gui_tabs_model_library_tab.html  gui_tabs_operation_history_tab.html  gui_tabs_resource_limits_tab.html  index.html  integrity_check_background_worker.html  integrity_check_cache_db.html  integrity_check_combined_tab.html  integrity_check_dark_mode_style.html  integrity_check_date_range_selector.html  integrity_check_enhanced_gui_tab.html  integrity_check_enhanced_gui_tab_components_dialogs.html  integrity_check_enhanced_gui_tab_components_models.html  integrity_check_enhanced_gui_tab_improved.html  integrity_check_enhanced_imagery_tab.html  (+52 more)
automated_fixes_completed/: cleanup_fix_scripts.py  fix_api_mismatches.py  fix_async_mocks.py  fix_ffmpeg_methods.py  fix_missing_imports.py  fix_path_exists.py  fix_s3_method_signatures.py  fix_s3_test_args.py
docs/: BATCH_PROCESSING.md  COVERAGE.md  FUTURE_TODO.md  LINTING.md  LINTING_PROGRESS.md  LINTING_SETUP.md  Makefile  README.md  TODO.md  UI_ENHANCEMENTS_GUIDE.md  conf.py  debugging_diagnostics.md  improvement_plan.md  index.rst  installation.rst  integrity_check_enhanced_options.md  integrity_check_fixes.md  integrity_check_implementation_plan.md  integrity_check_improvement_plan.md  license.rst  main_tab_debugging_implementation.md  main_tab_debugging_plan.md  quickstart.rst  requirements.txt  satellite_detection_download_testing.md  satellite_file_patterns_guide.md  satellite_integrity_integration_plan.md  settings_persistence_issues.md  signal_connection_approach.md  sqlite_thread_safety_fixes.md  tab_refactoring_plan.md  ui_improvements.md  unified_interface_guide.md
examples/: README.md
goesvfi/: cli.py  exceptions.py  gui.py  gui.py.bak  gui.py.noqa.bak  gui_backup.py  gui_backup.py.bak  gui_enhancements_integration.py  gui_integration_patch.py  integrity_tab_design.md  run_vfi.py
legacy_tests/: EVALUATION_CHECKLIST.md  README.md  test_imagery_simplified.py  test_real_s3_path.py  test_real_s3_paths.py  test_s3_unsigned_access.py
logs/: app_debug.txt  app_final.txt  app_improved.txt  app_log.txt  app_log_fixed.txt  app_log_new.txt  app_noclose.txt  crash_log.txt  debug_log.txt  final_debug.txt  s3_store_errors.txt
monitoring/: alert_rules.yml  prometheus.yml
quarantined_files/: sanchez_processor_corrupted.py
scripts/: analyze_rife_cli.py  check_coverage_threshold.py  date_conversion_example.py  generate_coverage_badge.py  generate_docs.py  script_categorization.json  test_rife_capabilities.py  validate_cicd.py  validate_cicd_simple.py
tests/: README.md  conftest.py  integrity_check_test_status.md  integrity_check_test_status_updated.md  test_coverage_example.py  test_coverage_example_v2.py  test_reconcile_manager_integration.py  test_reconcile_manager_integration_v2.py  test_rife_analyzer.py  test_rife_analyzer_v2.py
(+953 files in other folders)
