[project]
name = "goesvfi"
version = "0.5.0"  # Updated version for Integrity Check feature
description = "GOES satellite frame interpolation tool with integrity checking"
dependencies = [
    "PyQt6",
    "onnxruntime",
    "numpy",
    "Pillow",
    "opencv-python-headless",
    "ffmpeg-python",
    "colorlog",
    "requests",
    "tqdm",
    # Integrity Check module dependencies
    "aiohttp>=3.11.0",
    "aioboto3>=14.0.0",
    "xarray>=2025.4.0",
    "netCDF4>=1.6.0",
    "matplotlib>=3.10.0",
    "aiofiles>=24.1.0",
]
readme = "README.md"
requires-python = ">=3.13"  # Updated Python requirement

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goesvfi"]

[project.scripts]
goesvfi = "goesvfi.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.14.0",
    "mock>=5.2.0",
    "mypy",
    "types-requests",
    "types-Pillow",
    "types-aiofiles",
    "types-tqdm",
    "types-boto3",
]

dev = [
    "black>=24.2.0",
    "ruff>=0.1.15",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "test_*.py"
addopts = "-ra -q --cov=goesvfi --cov-report=term-missing"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 120
ignore = [
    "E114", "E116", "E117",  # Indentation issues
    "E501",                 # Line length
    "E131", "E203", "W503", # Line breaks
    "C901",                 # Complexity
    # Docstring issues
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D201", "D202", "D203", "D204", "D205",
    "D400", "D401", "D402", "D403", "D404", "D405", "D406", "D407", "D408", "D409",
    "D410", "D411", "D412", "D413", "D414", "D415", "D416", "D417",
    # Quote style
    "Q000",
    # Other minor issues
    "E261", "B907", "F821", "F841", "F811"
]
