[project]
name = "goesvfi"
version = "0.8.0"  # Updated version for Integrity Check feature
description = "GOES satellite frame interpolation tool with integrity checking"
dependencies = [
    "PyQt6",
    "qt-material>=2.14",
    "numpy",
    "Pillow",
    "opencv-python-headless",
    "ffmpeg-python",
    "colorlog",
    "requests",
    "psutil",
    "tqdm",
    "imageio",
    "python-dateutil>=2.9.0",
    # Integrity Check module dependencies
    "aiohttp>=3.11.0",
    "aioboto3>=14.0.0",
    "xarray>=2025.4.0",
    "netCDF4>=1.6.0",
    "matplotlib>=3.10.0",
    "aiofiles>=24.1.0",
]
readme = "README.md"
requires-python = ">=3.13"  # Updated Python requirement

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["goesvfi"]

[project.scripts]
goesvfi = "goesvfi.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.0.0",
    "mock>=5.2.0",
]

dev = [
    "black>=24.2.0",
    "ruff>=0.8.0",
    "isort>=5.12.0",
    "flake8>=7.2.0",
    "flake8-bugbear",
    "flake8-comprehensions",
    "pylint>=3.3.7",
    "vulture>=2.14",
    "bandit>=1.8.0",
    "safety>=4.0.0",
    "xenon>=0.9.3",
    "tox>=4.0.0",
]

typing = [
    "mypy",
    "pyright>=1.1.390",
    "types-requests",
    "types-Pillow",
    "types-aiofiles",
    "types-tqdm>=4.66.0",
    "PyQt6-stubs @ git+https://github.com/python-qt-tools/PyQt6-stubs.git",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "test_*.py"
addopts = "-ra -q --cov=goesvfi --cov-report=term-missing"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 120
ignore = [
    "E114", "E116", "E117",  # Indentation issues
    "E501",                 # Line length
    "E131", "E203", "W503", # Line breaks
    "C901",                 # Complexity
    # Docstring issues
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D201", "D202", "D203", "D204", "D205",
    "D400", "D401", "D402", "D403", "D404", "D405", "D406", "D407", "D408", "D409",
    "D410", "D411", "D412", "D413", "D414", "D415", "D416", "D417",
    # Quote style
    "Q000",
    # Other minor issues
    "E261", "B907", "F821", "F841", "F811"
]
